--- a/after-party.conf
+++ b/after-party.conf
@@ -2,8 +2,8 @@
 
 ################################################
 # Developed by: Andrey M.
-# Purpose: 
-# Date: -2025
+# Purpose: Configuration file for afteer-party.sh
+# Date: 20-02-2025
 # Version: 1.0.0
 ################################################
 
