--- a/after-party.conf
+++ b/after-party.conf
@@ -14,7 +14,7 @@ package_sources=("https://download.docker.com/linux/centos/docker-ce.repo")
 package_list=("git" "wget" "curl" "vim" "bash-completion" "tmux" "git-all" "yum-utils" "device-mapper-persistent-data" "lvm2" "docker-ce" "docker-ce-cli" "containerd.io" "docker-buildx-plugin" "docker-compose-plugin")
 
 # allias
-alias_list=("ll='la -lah --color=auto'" "cc='clear'")
+alias_list=("ll='ls -lah --color=auto'" "cc='clear'")
 
 # vim plugins
 vim_plug_list=("davidhalter/jedi-vim" "tpope/vim-fugitive" "tpope/vim-surround" "scrooloose/nerdtree" "vim-airline/vim-airline")
